# tvm-qnn-clblast

./: .gitmodules  Dockerfile  QNN_OpPackage_HTP_Makefile  README.md  backend_config.json  backend_extensions.json  benchmark_qnn.py  build_tvm.sh  plot.ipynb  qnn-net-run_inceptionnet.sh  qnn_custom.sh  qnn_prepare_model.sh  run_contention.py  run_contention.sh  찝찝.md
.devcontainer/: devcontainer.json  post-create.sh
clblast_bw_test/: .gitignore  CMakeLists.txt  README.md  benchmark_params.py  build-android.sh  main.cc
clblast_bw_test/cmake/: FindOpenCL.cmake
clblast_bw_test/include/: kernel.cl  kernel_source.h
model/: .gitignore  make_matmul_torch.py
